--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -6,11 +6,13 @@
     <title>{{name}}</title>
 </head>
 <body>
-    <h1>{{name}}</h1>
-    <ul>
-        {% for x in ingredients %}
-            <li>{{x.name}} - {{x.quantity}}</li>
-        {% endfor %}
-    </ul>
+<a href="/ledger/recipes/list"> <h1> List of Recipes </h1> </a>
+<h1> {{object.name}} </h1>
+<h2> Ingredients: </h2>
+<ul>
+    {% for i in object.ingredients.all %}
+        <li>{{i.ingredientField.name}} : {{i.quantity}}</li>
+    {% endfor %}
+</ul>
 </body>
 </html>
